# isle-autorun-reimpl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  autorun.ini  installs.mpg
src/: assets.cpp  assets.h  globals.h  main.cpp  utils.h
src/res/: autorun_bmp.h  bitmaps.h  cancel0_bmp.h  cancel1_bmp.h  config0_bmp.h  config1_bmp.h  free0_bmp.h  free1_bmp.h  gen_headers.sh  icon_bmp.h  install0_bmp.h  install1_bmp.h  installs.smk  media.h  readme0_bmp.h  readme1_bmp.h  run0_bmp.h  run1_bmp.h  uninstall0_bmp.h  uninstall1_bmp.h
